Fix button spacing

--- a/internal/interface/web/assets/styles.scss
+++ b/internal/interface/web/assets/styles.scss
@@ -79,7 +79,7 @@ button {
   font-size: 1em;
   font-weight: 600;
   font-family: inherit;
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   text-align: center;
   transition: border-color 0.25s;
   width: 100%;
